--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/titlebar/borders/_native.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/titlebar/borders/_native.scss
@@ -1,6 +1,6 @@
 & {
     //Disable top tab distance (TODO: fix on AERO)
-    --tab-distance-from-top: 0;
+    --tab-distance-from-top: 0px;
 
 	--titlebar-box-shadow: none;
 }
